-- Putzdienst-Schema (Zyklus, Erinnerungsstufen, Termine, Zuteilung, abweichende
-- Pflichtmenge, Freikauf) samt der Querschnitts-Entität Zahlungsvorgang (Q3).
-- Konzeptioneller Entwurf zu domains/putzdienst.md und domains/grenzkarte.md —
-- konkreter als Prosa, aber noch kein Alembic-Migrationscode.
--
-- SETZT domains/stammdaten-schema.sql VORAUS und wird nach ihm geladen: es
-- referenziert families und nutzt dessen set_row_audit()-Trigger-Funktion samt
-- app.actor-Präfixregel (entra:/guardian:/system:). Eine zweite Audit-Variante
-- gibt es bewusst nicht.
--
-- Stammdaten sind ab dem Vollimport eingefroren (domains/grenzkarte.md, „Freeze
-- der Stammdaten"). Dieses Schema hält sich daran: es referenziert families und
-- liest grade_levels/classes/children/employees, ändert dort aber nichts — der
-- Putzdienst ist die einzige zeitkritische Domäne, die rein lesend ist
-- (fachdomaenen.md Abschnitt 6).
--
-- id-Typ wie in Stammdaten: uuid, wo eine Zeile in einer Eltern-URL auftauchen
-- kann (Freikauf, Zahlung), integer-Identity für die reinen Verwaltungs-
-- Entitäten (Zyklus, Termin, Typ), die nur intern gepflegt werden.
--
-- Was hier bewusst NICHT steht:
--   * Keine Kapazität am Termin. Sie wird zweistufig berechnet (Live-Obergrenze
--     während der Buchungsphase, endgültige Kapazität bei Buchungsschluss) und
--     wäre als Spalte ein zweiter, veraltender Ort für einen abgeleiteten Wert
--     (rules.md Abschnitt 1, domains/putzdienst.md).
--   * Kein Stundenkonto, kein Stundennachweis und keine Stundenzahl an der
--     Terminart — der Putzdienst führt gar keinen Nachweis. Erfasst wird nur,
--     ob eine Familie erschienen ist; gezählt wird in Terminen (5+1). Der
--     Stundenzettel der Schule gehört zum Bonussystem Elternmitarbeit
--     (domains/putzdienst.md, „Abgrenzung zum Elternbonus").
--   * Keine Anwesenheitszeiten. v1 ist eine Papier-Unterschriftenliste; erfasst
--     wird nur das Nichterscheinen, weil es eine Strafzahlung auslöst.
--   * Keine Strafzahlung als Zahlungsvorgang. Sie entsteht nachträglich, wird
--     nicht im Selbstservice bezahlt und läuft über Optigem
--     (domains/grenzkarte.md, Q3) — Weltenbaum hält nur das Nichterscheinen fest.
--   * Keine Zuteilungsherkunft (Selbstbuchung/Solver/Sekretariat). Kein
--     benannter Prozess fragt danach.
--   * Kein eigener Performance-Benchmark, anders als bei Stammdaten
--     (domains/stammdaten-schema-benchmark.md). Die größte Tabelle hier ist
--     cleaning_assignments mit rund 150 Familien mal 6 Terminen, also knapp
--     tausend Zeilen je Zyklus — zwei Größenordnungen unter dem Stammdaten-Satz,
--     der bereits als performance-neutral vermessen ist. Auch die schwerste
--     Abfrage der Domäne (Restbedarf aller Familien als Solver-Eingabe) liest
--     diesen Satz am Stück. Messen hieße belegen, dass tausend Zeilen schnell
--     sind. Ändert sich das — etwa weil eine spätere Domäne payments in ganz
--     anderer Menge füllt —, gehört der Benchmark nachgezogen.

-- ---------------------------------------------------------------------------
-- Zyklus
-- ---------------------------------------------------------------------------

-- Ein Zyklus je Schuljahr, Zeitraum Oktober–September. Alle organisatorischen
-- Werte, die sich zyklisch ändern, stehen als Daten hier und nicht im Code
-- (rules.md Abschnitt 3) — eine Beitrags- oder Pflichtänderung ist damit eine
-- Eingabe in der Verwaltungsoberfläche, kein Redeploy.
--
-- Das Buchungsfenster liegt VOR dem Zyklus (September, der Zyklus beginnt im
-- Oktober) — deshalb bewusst kein CHECK, der es in den Zeitraum zwingt. Ebenso
-- keiner, der es vor starts_on erzwingt: eine einmal verlängerte Anmeldung ist
-- ein realer Fall, und eine harte Sperre ohne benannten Ausweg wird an dieser
-- Schule umgangen statt eingehalten (fachdomaenen.md Abschnitt 3).
CREATE TABLE cleaning_cycles (
    cycle_id            integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label               text NOT NULL UNIQUE CHECK (label <> ''),  -- z. B. "2026/27"
    starts_on           date NOT NULL,
    ends_on             date NOT NULL,
    booking_opens_at    timestamptz NOT NULL,
    booking_closes_at   timestamptz NOT NULL,
    -- Pflichtanzahl, getrennt gezählt und NICHT gegeneinander verrechenbar
    -- (domains/putzdienst.md): heute 5 regulär + 1 Großputz, änderbar ohne
    -- Migration. Deshalb zwei Spalten und keine Gesamtzahl — aus "6" ließe sich
    -- nicht rekonstruieren, welcher Teil offen ist.
    required_regular    smallint NOT NULL CHECK (required_regular >= 0),
    required_major      smallint NOT NULL CHECK (required_major >= 0),
    -- Betrag des Komplett-Freikaufs: die GESAMTE Jahrespflicht in der
    -- Buchungsphase, regulär + Großputz zusammen, deshalb ein Betrag je Zyklus.
    buyout_amount       numeric(8,2) NOT NULL CHECK (buyout_amount >= 0),
    -- Betrag des Einzel-Freikaufs je zugeteiltem Termin im laufenden Betrieb
    -- (domains/putzdienst.md, „Freikauf & Zahlung"). Eigener Wert und nicht
    -- buyout_amount geteilt durch die Pflichtmenge: real ergibt das zwar
    -- dasselbe (6 × 35 = 210), aber beide Beträge sind einzeln gesetzte
    -- Entscheidungen der Schule, und eine Ableitung würde den einen still
    -- mitverschieben, sobald jemand den anderen ändert.
    slot_buyout_amount  numeric(8,2) NOT NULL CHECK (slot_buyout_amount >= 0),
    -- Betrag bei Nichterscheinen. Reiner Konfigurationswert für das Anschreiben:
    -- die Forderung selbst zieht die Buchhaltung über Optigem, sie entsteht in
    -- Weltenbaum nie als Zahlungsvorgang (domains/grenzkarte.md, Q3).
    -- Die Strafe wird IMMER verhängt; ausgesetzt werden kann sie nur von einer
    -- berechtigten Person, und dieser Gegenvorgang steht als
    -- cleaning_assignments.penalty_waived_at an der Zuteilung
    -- (domains/putzdienst.md, „Erlass und Straf-Ausnahme").
    no_show_penalty     numeric(8,2) NOT NULL CHECK (no_show_penalty >= 0),
    -- Plätze je Termin, die die Live-Obergrenze während der Buchungsphase
    -- freihält, damit beliebte frühe Termine nicht volllaufen und dem Solver am
    -- Ende nur die unbeliebten späten bleiben (domains/putzdienst.md,
    -- „Restplatz-Zuordnung"). Der Solver darf bei Buchungsschluss hineingreifen.
    capacity_buffer     smallint NOT NULL CHECK (capacity_buffer >= 0),
    -- Stichtag der Quereinsteiger-Proration: wer ab diesem Tag eintritt, bekommt
    -- für diesen Zyklus gar keine Pflicht mehr. Liegt real um die Pfingstferien.
    -- Nötig neben der Proration selbst, weil die Formel bis zum letzten Termin
    -- über die Untergrenze immer noch einen Termin ergäbe — für sechs verbleibende
    -- Schulwochen will die Schule niemanden mehr einteilen. Nullable: ein Zyklus
    -- ohne Stichtag prorationiert bis zum Schluss.
    proration_cutoff_on date,
    created_at          timestamptz NOT NULL DEFAULT now(),
    created_by          text NOT NULL,
    updated_at          timestamptz NOT NULL DEFAULT now(),
    updated_by          text NOT NULL,
    CONSTRAINT cleaning_cycles_period_check
        CHECK (ends_on > starts_on),
    CONSTRAINT cleaning_cycles_booking_window_check
        CHECK (booking_closes_at > booking_opens_at),
    CONSTRAINT cleaning_cycles_proration_cutoff_check
        CHECK (proration_cutoff_on IS NULL
               OR proration_cutoff_on BETWEEN starts_on AND ends_on),
    -- Zwei überlappende Zyklen machen jeden Termin mehrdeutig und liefern der
    -- Abfrage „welcher Zyklus läuft gerade" zwei Zeilen. Als
    -- Ausschluss-Constraint statt als Anwendungsprüfung: native Postgres-Mechanik,
    -- keine Extension nötig, und sie greift auch beim Import.
    CONSTRAINT cleaning_cycles_no_overlap_excl
        EXCLUDE USING gist (daterange(starts_on, ends_on, '[]') WITH &&)
);

-- Erinnerungsstufen als Zeilen statt als feste Spalten (domains/putzdienst.md):
-- „X Tage vorher", heute 7 und 1. Eine dritte Stufe ist damit ein Datensatz und
-- keine Migration. Der Primärschlüssel verhindert nebenbei die doppelte Stufe.
-- Kein Bezeichnungsfeld: die Stufe IST die Zahl, ein Name daneben wäre ein
-- zweiter Ort für dieselbe Tatsache.
-- Mit Audit-Spalten, anders als eine reine Werteliste: eine unbemerkt gelöschte
-- Stufe verschickt keine Erinnerung, und ein stiller Fehlschlag zählt als nicht
-- vorhanden (rules.md Abschnitt 3).
CREATE TABLE cleaning_reminder_stages (
    cycle_id    integer NOT NULL REFERENCES cleaning_cycles(cycle_id) ON DELETE CASCADE,
    days_before smallint NOT NULL CHECK (days_before > 0),
    created_at  timestamptz NOT NULL DEFAULT now(),
    created_by  text NOT NULL,
    updated_at  timestamptz NOT NULL DEFAULT now(),
    updated_by  text NOT NULL,
    PRIMARY KEY (cycle_id, days_before)
);

-- ---------------------------------------------------------------------------
-- Termine
-- ---------------------------------------------------------------------------

-- Art eines Putztermins. Lookup und nicht zwei fest verdrahtete Werte
-- (rules.md Abschnitt 3): an der Schule gab es bereits einen Termin, an dem nur
-- Gartenarbeit anstand und der trotzdem als regulärer Putzdienst zählte. Mit
-- einem Zweiwertfeld wäre das eine Migration oder eine Falschbezeichnung
-- gewesen; als Lookup ist es eine Zeile.
--
-- is_major ist die Ausnahme aus rules.md Abschnitt 3: keine Bezeichnung, sondern
-- eine strukturelle Tatsache — es entscheidet, gegen welche der beiden getrennt
-- gezählten Pflichtzahlen des Zyklus ein Termin zählt. Deshalb ein nicht
-- umbenennbares Flag neben dem frei benennbaren label und nicht als weitere
-- Lookup-Zeile. "Gartenarbeit" und "Regulär" tragen beide false, "Großputz"
-- trägt true; mehrere Zeilen je Ausprägung sind ausdrücklich erlaubt, deshalb
-- hier kein partieller UNIQUE-Index wie bei grade_levels.is_final_grade.
--
-- Audit-Spalten wie bei grade_levels und aus demselben Grund: eine unbemerkte
-- Änderung an is_major verschiebt still die Pflichterfüllung ganzer Zyklen,
-- statt nur eine Bezeichnung zu ändern.
CREATE TABLE cleaning_duty_types (
    duty_type_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    label        text NOT NULL UNIQUE CHECK (label <> ''),  -- "Regulär", "Großputz", "Gartenarbeit"
    is_major     boolean NOT NULL DEFAULT false,
    -- KEINE Stundenzahl an der Terminart. Sie hatte genau einen Abnehmer, den
    -- Stundennachweis — und den führt der Putzdienst nicht: erfasst wird
    -- ausschließlich, ob eine Familie erschienen ist, gezählt wird in Terminen
    -- (domains/putzdienst.md). Der Stundenzettel der Schule gehört zum
    -- Bonussystem Elternmitarbeit und misst etwas anderes.
    created_at   timestamptz NOT NULL DEFAULT now(),
    created_by   text NOT NULL,
    updated_at   timestamptz NOT NULL DEFAULT now(),
    updated_by   text NOT NULL
);

-- Konkreter Putztermin. Trägt der Zyklus-Konfiguration wegen kein eigenes
-- Kapazitätsfeld (Kopfkommentar) und auch keine Stundenzahl: gezählt wird in
-- Terminen, nicht in Stunden — regulär und Großputz sind nicht gegeneinander
-- verrechenbar, und einen Stundennachweis führt der Putzdienst nicht
-- (domains/putzdienst.md).
--
-- Bewusst KEIN UNIQUE auf (cycle_id, slot_date): am selben Kalendertag können
-- ein Großputz und ein regulärer Termin liegen — die Solver-Regel, die eine
-- Familie nicht beiden zuordnet, ist genau deshalb nötig. Ob es zwei reguläre
-- Termine an einem Tag geben darf, hat niemand entschieden; eine Sperre ohne
-- benannten Bedarf wäre eine Einschränkung auf Verdacht.
--
-- Dass slot_date in den Zeitraum seines Zyklus fällt, sichert die
-- Eingabemaske — schemaseitig wäre es ein Nachschlag in einer anderen Tabelle
-- und damit ein Trigger, dieselbe Abwägung wie bei phone_numbers.is_primary
-- in domains/stammdaten-schema.sql.
CREATE TABLE cleaning_slots (
    slot_id      integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    cycle_id     integer NOT NULL REFERENCES cleaning_cycles(cycle_id) ON DELETE RESTRICT,
    duty_type_id integer NOT NULL REFERENCES cleaning_duty_types(duty_type_id) ON DELETE RESTRICT,
    slot_date    date NOT NULL,
    created_at   timestamptz NOT NULL DEFAULT now(),
    created_by   text NOT NULL,
    updated_at   timestamptz NOT NULL DEFAULT now(),
    updated_by   text NOT NULL
);
-- Die Buchungsoberfläche listet die Termine eines Zyklus nach Datum; der Solver
-- liest denselben Satz am Stück.
CREATE INDEX ON cleaning_slots (cycle_id, slot_date);
CREATE INDEX ON cleaning_slots (duty_type_id);

-- ---------------------------------------------------------------------------
-- Pflicht je Familie
-- ---------------------------------------------------------------------------

-- Abweichende Pflichtmenge je Familie und Zyklus. Keine Zeile heißt: Standard
-- aus dem Zyklus. Der Schulvertrag sieht die Abweichung ausdrücklich vor („In
-- besonderen Fällen kann mit dem Schulträger eine abweichende Regelung getroffen
-- werden", Anlage Putzdienstregelung).
--
-- Dasselbe Feld nimmt die Quereinsteiger-Proration auf — deshalb gibt es für
-- Sonderfälle keinen zweiten Mechanismus. Die Proration rechnet das Sekretariat
-- (bzw. die Oberfläche als Vorschlag), gespeichert wird nur ihr Ergebnis:
--   anteilige Termine = (verbleibende Termine dieser Art ab Eintritt /
--                        Termine dieser Art im Zyklus) × Pflichtanzahl dieser
--                       Art, ABGERUNDET — mindestens 1, solange von dieser Art
--                       noch ein Termin bevorsteht
-- Bei Eintritt zum Halbjahr ergibt das die real geübte Praxis 2 + 1: die Hälfte
-- von 5 + 1. Abrunden trägt dabei die reguläre Menge (5 × 0,5 = 2,5 → 2), die
-- Untergrenze den Großputz (1 × 0,5 = 0,5 → 0, obwohl noch einer bevorsteht) —
-- ein einzelner Termin lässt sich nicht anteilig leisten. Ab
-- cleaning_cycles.proration_cutoff_on gilt stattdessen 0 + 0.
--
-- Zwei nullable Spalten statt einer Gesamtzahl: die beiden Pflichten werden
-- getrennt gezählt, und „3 regulär, Großputz wie Standard" muss ausdrückbar
-- sein. NULL heißt je Spalte „Standard des Zyklus", nicht „null Termine" — 0
-- ist ein eigener, gültiger Wert (Eintritt nach dem Stichtag).
--
-- family_id mit ON DELETE RESTRICT wie children.family_id: eine Familie mit
-- vereinbarter Sonderregelung wird nicht nebenbei mitgelöscht.
CREATE TABLE cleaning_family_duties (
    cycle_id         integer NOT NULL REFERENCES cleaning_cycles(cycle_id) ON DELETE CASCADE,
    family_id        uuid NOT NULL REFERENCES families(family_id) ON DELETE RESTRICT,
    required_regular smallint CHECK (required_regular >= 0),
    required_major   smallint CHECK (required_major >= 0),
    -- Warum abgewichen wird: „Quereinstieg 02/2027" oder „Vereinbarung
    -- Schulträger". Freitext, weil der Wert diese eine Zeile beschreibt und
    -- niemand danach gruppiert (rules.md Abschnitt 3). Ohne ihn ist später nicht
    -- unterscheidbar, ob eine 3 gerechnet oder verhandelt wurde.
    reason           text,
    created_at       timestamptz NOT NULL DEFAULT now(),
    created_by       text NOT NULL,
    updated_at       timestamptz NOT NULL DEFAULT now(),
    updated_by       text NOT NULL,
    PRIMARY KEY (cycle_id, family_id),
    -- Eine Zeile, die beide Spalten leer lässt, sagt nichts und verdeckt nur den
    -- Standard.
    CONSTRAINT cleaning_family_duties_any_deviation_check
        CHECK (required_regular IS NOT NULL OR required_major IS NOT NULL)
);
CREATE INDEX ON cleaning_family_duties (family_id);

-- ---------------------------------------------------------------------------
-- Zuteilung
-- ---------------------------------------------------------------------------

-- Familie ↔ Putztermin. Das fachliche Paar (slot_id, family_id) trägt die erste
-- Solver-Nebenbedingung („eine Familie höchstens einmal pro Termin",
-- domains/putzdienst.md) — im Schema statt nur im Modell, damit auch die
-- manuelle Verschiebung durchs Sekretariat sie nicht verletzen kann. Es ist
-- aber nicht mehr der Primärschlüssel, sondern ein UNIQUE daneben: der
-- Einzel-Freikauf (unten) zeigt auf die Zuteilung, und dieser Fremdschlüssel
-- taucht in einer Eltern-URL auf. Ein zusammengesetzter Schlüssel aus einer
-- fortlaufenden Termin-ID und der Familien-uuid gäbe dort beides preis;
-- dieselbe Begründung wie bei cleaning_buyouts und den personenbezogenen
-- Tabellen in Stammdaten.
--
-- no_show ist ein Attribut der Zuteilung und keine eigene Anwesenheits-Entität
-- (domains/grenzkarte.md): erfasst wird nur das Nichterscheinen, weil es eine
-- Strafzahlung auslöst; die Anwesenheit selbst bleibt in v1 eine
-- Papier-Unterschriftenliste. Wird sie später abgelöst, treten Ankunfts- und
-- Gehzeit an dieselbe Zeile — die Struktur trägt das bereits.
--
-- penalty_waived_at ist der Gegenvorgang dazu. Die Strafe entsteht IMMER, wenn
-- jemand nicht erscheint — das System kennt keine Bedingung, unter der sie gar
-- nicht erst anfällt, und die Regel bleibt damit für alle gleich. Wer die
-- Berechtigung hat, setzt sie danach aus, und genau das hält diese Spalte fest
-- (domains/putzdienst.md, „Erlass und Straf-Ausnahme"). Bewusst so herum:
-- entstünde die Strafe nur manchmal, wäre hinterher nicht unterscheidbar, ob
-- jemand entschieden oder jemand vergessen hat. Ein Zeitpunkt statt eines
-- Kennzeichens, gleiche Bauform wie payments.settled_at; WER ausgesetzt hat,
-- trägt die ohnehin vorhandene updated_by-Spalte, deshalb kein eigenes Feld.
-- Die enge Berechtigung dafür ist ein Spalten-GRANT und keine Spalte
-- (domains/stammdaten.md, „Datensichtbarkeit").
--
-- ON DELETE RESTRICT auf beiden Seiten: einen Termin mit Zuteilungen zu löschen
-- ist eine echte Entscheidung (die Familien müssen umgeteilt und benachrichtigt
-- werden), und eine Familie mit geleistetem oder versäumtem Termin verschwindet
-- nicht nebenbei.
CREATE TABLE cleaning_assignments (
    assignment_id     uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    slot_id           integer NOT NULL REFERENCES cleaning_slots(slot_id) ON DELETE RESTRICT,
    family_id         uuid NOT NULL REFERENCES families(family_id) ON DELETE RESTRICT,
    no_show           boolean NOT NULL DEFAULT false,
    penalty_waived_at timestamptz,
    created_at        timestamptz NOT NULL DEFAULT now(),
    created_by        text NOT NULL,
    updated_at        timestamptz NOT NULL DEFAULT now(),
    updated_by        text NOT NULL,
    UNIQUE (slot_id, family_id),
    -- Ausgesetzt werden kann nur eine Strafe, die es gibt. Ohne diese Prüfung
    -- stünde an einer wahrgenommenen Zuteilung ein Vermerk über den Erlass
    -- einer nie entstandenen Forderung — ein Zustand, den niemand herstellen
    -- will und den die Buchhaltung als Widerspruch geliefert bekäme.
    CONSTRAINT cleaning_assignments_waiver_requires_no_show_check
        CHECK (penalty_waived_at IS NULL OR no_show)
);
-- „Wie viele Termine hat diese Familie in diesem Zyklus" ist die häufigste
-- Abfrage der Domäne (Bedarfsermittlung, Buchungsoberfläche, Solver-Eingabe) und
-- startet bei der Familie — der Primärschlüssel oben hilft ihr nicht.
CREATE INDEX ON cleaning_assignments (family_id);

-- ---------------------------------------------------------------------------
-- Freikauf und Zahlung
-- ---------------------------------------------------------------------------

-- Komplett-Freikauf der GESAMTEN Jahrespflicht einer Familie (regulär +
-- Großputz zusammen) in der Buchungsphase — deshalb höchstens eine Zeile je
-- Familie und Zyklus und kein Betrag hier: der steht am Zyklus, gezahlt wird
-- über die Zahlung unten.
--
-- Der Einzel-Freikauf eines bereits zugeteilten Termins im laufenden Betrieb
-- ist NICHT dieselbe Zeile: er zeigt auf eine Zuteilung statt auf Familie ×
-- Zyklus und ist mehrfach je Familie möglich. Er steht deshalb als eigene
-- Entität daneben (cleaning_slot_buyouts, unten).
--
-- Eigene Entität statt eines Kennzeichens an cleaning_family_duties: der
-- Freikauf ist der Vorgang, auf den der Zahlungsvorgang zeigt, und er entsteht
-- unabhängig davon, ob die Familie eine abweichende Pflichtmenge hat.
--
-- uuid-Primärschlüssel neben dem fachlichen UNIQUE: die Zeile taucht in einer
-- Eltern-URL auf (Bestätigungsseite, Stripe-Rücksprung), und über eine
-- fortlaufende Zahl ließe sich der Freikauf einer anderen Familie erraten —
-- dieselbe Begründung wie bei den personenbezogenen Tabellen in Stammdaten.
CREATE TABLE cleaning_buyouts (
    buyout_id  uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    cycle_id   integer NOT NULL REFERENCES cleaning_cycles(cycle_id) ON DELETE RESTRICT,
    family_id  uuid NOT NULL REFERENCES families(family_id) ON DELETE RESTRICT,
    created_at timestamptz NOT NULL DEFAULT now(),
    created_by text NOT NULL,
    updated_at timestamptz NOT NULL DEFAULT now(),
    updated_by text NOT NULL,
    UNIQUE (cycle_id, family_id)
);
CREATE INDEX ON cleaning_buyouts (family_id);

-- Einzel-Freikauf: eine Familie kann einen bereits ZUGETEILTEN Termin
-- freikaufen, den sie doch nicht wahrnehmen kann (domains/putzdienst.md,
-- „Freikauf & Zahlung"). Das ist der benannte legitime Ausweg vor der Strafe —
-- wer rechtzeitig merkt, dass er nicht kann, zahlt den Einzelbetrag statt der
-- Strafzahlung. Genau das hält die harte Strafregel durchsetzbar
-- (fachdomaenen.md Abschnitt 3).
--
-- Eigene Tabelle und nicht dieselbe wie oben: der Komplett-Freikauf gilt Familie
-- × Zyklus und höchstens einmal, dieser gilt einer einzelnen Zuteilung und
-- mehrfach je Familie. In eine Tabelle gezwungen bräuchte es zwei nullable
-- Bezugsspalten samt Entweder-oder-CHECK — für zwei Vorgänge, die außer dem
-- Wort „Freikauf" nichts teilen.
--
-- UNIQUE auf der Zuteilung: ein Termin wird höchstens einmal freigekauft, sonst
-- entstünde eine Doppelbelastung. Kein Betrag hier, er steht am Zyklus.
--
-- NICHT im Schema: die Frist „nur vor dem Termindatum". Sie lässt sich als CHECK
-- nicht ausdrücken, weil das Datum an cleaning_slots hängt, und sie bekommt
-- bewusst keinen Trigger. Sie gehört in dieselbe Backend-Stelle, die die Zahlung
-- auslöst — läge sie woanders, entstünde ein bezahlter Freikauf für einen
-- bereits gelaufenen Termin (TODO-SESSIONS.md).
CREATE TABLE cleaning_slot_buyouts (
    slot_buyout_id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    assignment_id  uuid NOT NULL UNIQUE REFERENCES cleaning_assignments(assignment_id) ON DELETE RESTRICT,
    created_at     timestamptz NOT NULL DEFAULT now(),
    created_by     text NOT NULL,
    updated_at     timestamptz NOT NULL DEFAULT now(),
    updated_by     text NOT NULL
);

-- Zahlungsvorgang — Querschnitts-Entität Q3 (domains/grenzkarte.md), hier zum
-- ersten Mal gebaut. KEINE Buchhaltung, keine Forderungsverwaltung, keine
-- Fälligkeiten: Optigem bleibt dafür führend. Weltenbaum berührt Geld nur, wo
-- ein Elternteil im Selbstservice bezahlt und der Prozess erst danach
-- weiterlaufen darf.
--
-- Q3 deckt genau drei Anlässe ab, alle über Stripe: Voranmeldung samt
-- Quereinstieg (Domäne 2/4), Ferienprogramm-Buchung (Domäne 3) und
-- Putzdienst-Freikauf (hier). Gebaut ist heute nur der Komplett-Freikauf — die
-- beiden anderen Anlässe und der Einzel-Freikauf eines zugeteilten Termins
-- kommen als je eine weitere nullable Vorgangs-Spalte samt erweitertem
-- Entweder-oder-CHECK dazu, nicht als zweite Zahlungstabelle. Diese Bauform
-- (Fremdschlüssel trägt die Unterscheidung, kein Typ-Feld daneben) ist dieselbe
-- wie bei guardians und payers in Stammdaten und behält die referenzielle
-- Integrität, die ein Typ-Feld plus untypisierte Vorgangs-ID aufgäbe.
--
-- settled_at statt eines Status-Lookups: „offen/bestätigt" sind zwei Zustände,
-- keine Auswahl aus benannten Alternativen (rules.md Abschnitt 3) — und der
-- Zeitpunkt ist derselbe Preis wie ein Boolean bei mehr Aussage, dieselbe
-- Entscheidung wie bei children.previous_school_consent_at. NULL heißt offen.
--
-- Bewusst NICHT hier: die Strafzahlung bei Nichterscheinen. Sie entsteht
-- nachträglich, wird nicht im Selbstservice bezahlt und läuft über Optigem
-- (domains/grenzkarte.md, Q3) — im Schema steht dafür nur
-- cleaning_assignments.no_show.
--
-- Ebenfalls nicht hier: der Zahler. payers in Stammdaten trägt das
-- Einzugs*mittel* (Bankverbindung, SEPA-Mandat) und ist von Q3 unabhängig — die
-- Stripe-Anlässe brauchen weder IBAN noch Mandat. Wer bezahlt hat, folgt aus dem
-- Vorgang: beim Freikauf ist es die Familie.
CREATE TABLE payments (
    payment_id         uuid PRIMARY KEY DEFAULT gen_random_uuid(),
    -- Anlass: genau ein Vorgang je Zahlung, getragen vom Fremdschlüssel und
    -- nicht von einem Typ-Feld daneben (Kopfkommentar). Je UNIQUE, damit zu
    -- einem Vorgang nie zwei Zahlungen entstehen — das wäre eine
    -- Doppelbelastung, kein Randfall. Ein fehlgeschlagener Stripe-Versuch bleibt
    -- dieselbe Zeile und wird erneut bezahlt, statt eine zweite anzulegen.
    --
    -- Beide nullable, mit dem Entweder-oder-CHECK unten: so kommen Voranmeldung
    -- und Ferienprogramm später als je eine weitere Spalte dazu, ohne dass diese
    -- Tabelle ihre Form ändert.
    cleaning_buyout_id      uuid UNIQUE REFERENCES cleaning_buyouts(buyout_id) ON DELETE RESTRICT,
    cleaning_slot_buyout_id uuid UNIQUE REFERENCES cleaning_slot_buyouts(slot_buyout_id) ON DELETE RESTRICT,
    amount             numeric(8,2) NOT NULL CHECK (amount > 0),
    -- Betrag als Kopie des Zyklus-Werts zum Zahlungszeitpunkt, nicht als Join:
    -- die einzige zulässige Redundanz-Ausnahme (rules.md Abschnitt 1) gilt hier
    -- nicht — dies ist keine Kopie, sondern eine eigene Tatsache. Was gezahlt
    -- wurde, muss auch dann noch stimmen, wenn der Freikauf-Betrag des Zyklus
    -- später korrigiert wird.
    --
    -- Zahlungsreferenz des Zahlungsdienstleisters (Stripe PaymentIntent).
    -- Nullable: der Weg über die manuelle Bestätigung durch die Buchhaltung
    -- bleibt als benannter Ausweg bestehen (Überweisung, Bargeld) und hat keine
    -- Referenz. Bewusst kein CHECK gegen settled_at — eine Referenz existiert
    -- bereits, bevor die Zahlung bestätigt ist.
    reference          text CHECK (reference <> ''),
    settled_at         timestamptz,
    created_at         timestamptz NOT NULL DEFAULT now(),
    created_by         text NOT NULL,
    updated_at         timestamptz NOT NULL DEFAULT now(),
    updated_by         text NOT NULL,
    -- Genau ein Anlass je Zahlung: keiner ist eine Zahlung ohne Grund, zwei
    -- wären eine Zahlung, die zwei Vorgänge freischaltet. Beim Hinzukommen der
    -- übrigen Anlässe wächst diese Liste um je einen Summanden.
    CONSTRAINT payments_exactly_one_subject_check
        CHECK ((cleaning_buyout_id IS NOT NULL)::int
             + (cleaning_slot_buyout_id IS NOT NULL)::int = 1)
);
-- „Welche Freikäufe sind noch offen" ist die Abfrage der Buchhaltung vor
-- Buchungsschluss — sie entscheidet, mit welchem Restbedarf der Solver rechnet.
CREATE INDEX ON payments (settled_at) WHERE settled_at IS NULL;

-- ---------------------------------------------------------------------------
-- Audit-Spalten fortschreiben — dieselbe Funktion wie in Stammdaten, kein
-- zweiter Trigger-Pfad (Kopfkommentar).
-- ---------------------------------------------------------------------------

CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON cleaning_cycles
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON cleaning_reminder_stages
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON cleaning_duty_types
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON cleaning_slots
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON cleaning_family_duties
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON cleaning_assignments
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON cleaning_buyouts
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON cleaning_slot_buyouts
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
CREATE TRIGGER set_row_audit BEFORE INSERT OR UPDATE ON payments
    FOR EACH ROW EXECUTE FUNCTION set_row_audit();
