// Putzdienst — nur Beziehungen
//
// Erzeugt von domains/dbml/generate.sh aus domains/putzdienst-schema.sql.
// ABGELEITET — nicht von Hand pflegen. Quelle ist die geladene Datenbank,
// nicht diese Datei; Spalten, Typen und Constraints stehen in der .sql.
//
// Je Tabelle stehen ausschließlich Primär- und Fremdschlüssel, damit die
// Kanten lesbar bleiben. Tabellen anderer Domänen sind Stubs und tragen
// ihre Herkunft als Notiz.

Table cleaning_assignments {
  assignment_id uuid [pk]
  family_id uuid
  slot_id integer
}

Table cleaning_buyouts {
  buyout_id uuid [pk]
  cycle_id integer
  family_id uuid
}

Table cleaning_cycles {
  cycle_id integer [pk]
}

Table cleaning_duty_types {
  duty_type_id integer [pk]
}

Table cleaning_family_duties {
  cycle_id integer [pk]
  family_id uuid [pk]
}

Table cleaning_reminder_stages {
  cycle_id integer [pk]
  days_before smallint [pk]
}

Table cleaning_slot_buyouts {
  slot_buyout_id uuid [pk]
  assignment_id uuid
}

Table cleaning_slots {
  slot_id integer [pk]
  cycle_id integer
  duty_type_id integer
}

Table payments {
  payment_id uuid [pk]
  cleaning_buyout_id uuid
  cleaning_slot_buyout_id uuid
}

Table families [note: 'aus Stammdaten'] {
  family_id uuid
}

Ref: cleaning_assignments.family_id > families.family_id
Ref: cleaning_assignments.slot_id > cleaning_slots.slot_id
Ref: cleaning_buyouts.cycle_id > cleaning_cycles.cycle_id
Ref: cleaning_buyouts.family_id > families.family_id
Ref: cleaning_family_duties.cycle_id > cleaning_cycles.cycle_id
Ref: cleaning_family_duties.family_id > families.family_id
Ref: cleaning_reminder_stages.cycle_id > cleaning_cycles.cycle_id
Ref: cleaning_slot_buyouts.assignment_id > cleaning_assignments.assignment_id
Ref: cleaning_slots.cycle_id > cleaning_cycles.cycle_id
Ref: cleaning_slots.duty_type_id > cleaning_duty_types.duty_type_id
Ref: payments.cleaning_buyout_id > cleaning_buyouts.buyout_id
Ref: payments.cleaning_slot_buyout_id > cleaning_slot_buyouts.slot_buyout_id

TableGroup "Fremde Domänen" {
  families
}
